# LidarrAPI.Metadata

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.crawler  Dockerfile.server  MANIFEST.in  README.md  README.rst  api.js  appveyor.yml  azure-pipelines.yml  config.json  discogsApi.js  docker-compose.crawler.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fetch.js  logger.js  mbmd.py  models.py  music.db  package-lock.json  package.json  postgres.env  pyproject.toml  redis.conf  requirements.txt  server.js  server.py  setup.py  tox.ini
.github/: dependabot.yml
admin/: create-amqp-extension
admin/lib/: common.inc.bash
apiDefinitions/: discogsApi.js  lastFmApi.js  musicbrainzApi.js
controllers/: albumController.js  artistController.js  index.js  searchController.js  trackController.js
hooks/: build
lidarrmetadata/: __init__.py  api.py  app.py  cache.py  chart.py  config.py  crawler.py  limit.py  models.py  provider.py  server.py  stats.py  util.py
lidarrmetadata/sql/: CreateIndices.sql  album_search_artist_mbid.sql  album_search_name.sql  all_artist_ids.sql  all_release_group_ids.sql  all_spotify_maps.sql  artist_by_id.sql  artist_by_release_group.sql  artist_id_from_spotify_id.sql  artist_redirect.sql  artist_search_mbid.sql  artist_search_name.sql  artist_search_name_with_album.sql  caa_by_mbid.sql  data_vintage.sql  links_artist_mbid.sql  links_release_group_mbid.sql  media_album_mbid.sql  recordings_album_mbid.sql  release_by_mbid.sql  release_by_release_group_id.sql  release_group_by_id.sql  release_group_by_recording_ids.sql  release_group_id_from_spotify_id.sql  release_group_redirect.sql  release_group_search_artist_mbid.sql  release_group_series.sql  track_album_mbid.sql  track_release_group.sql  track_search.sql  updated_albums.sql  updated_artists.sql  updated_spotify_albums.sql  updated_spotify_artists.sql
lidarrmetadata/static/: index.html
models/: album.js  artist.js  image.js  index.js  track.js
rewrite/: Cargo.toml
routes/: artist.js  index.js  search.js
routes/get/: album.js  artist.js  index.js  track.js
routes/search/: index.js
scripts/: search_cache.py
sir/: Dockerfile  config.ini
sql/: album_search_artist_mbid.sql  artist_search_mbid.sql  artist_search_name.sql  release_by_mbid.sql  track_album_mbid.sql
tests/: api_test.py  chart_test.py  config_test.py  conftest.py  e2e.js  limit_test.py  provider_test.py  util_test.py
