[tool.poetry]
name = "lidarrmetadata"
version = "0.1.0"
description = "Lidarr metadata API"
authors = ["Lidarr <development@lidarr.audio>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiocache = "0.11.1"
aiofiles = "0.6.0"
aiohttp = "3.7.3"
aioredis = "1.3.1"
async-timeout = "3.0.1"
asyncpg = "0.26.0"
attrs = "21.4.0"
beautifulsoup4 = "4.9.3"
billboard-py = "7.0.0"
blinker = "1.5"
certifi = "2022.12.7"
chardet = "3.0.4"
click = "7.1.2"
flask = "1.1.2"
gunicorn = "20.0.4"
h11 = "0.11.0"
h2 = "4.0.0"
hiredis = "1.1.0"
hpack = "4.0.0"
httptools = "0.1.1"
hypercorn = "0.13.2"
hyperframe = "6.0.1"
idna = "2.10"
itsdangerous = "2.0.0a1"
jinja2 = "3.0.0a1"
markupsafe = "2.0.0a1"
multidict = "5.1.0"
priority = "1.3.0"
pylast = "4.3.0"
pytelegraf = "0.3.3"
python-dateutil = "2.8.2"
python-levenshtein = "0.12.2"
pytz = "2022.7"
quart = "0.14.1"
redis = "3.5.3"
requests = "2.25.1"
sentry-sdk = "0.19.5"
six = "1.15.0"
soupsieve = "2.3.2.post1"
spotipy = "2.16.1"
toml = "0.10.2"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.9"
uvicorn = "0.20.0"
uvloop = "0.14.0"
werkzeug = "1.0.1"
wsproto = "1.1.0"
yarl = "1.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
mockredispy = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
