[tool.poetry]
name = "lidarrmetadata"
version = "0.1.0"
description = "Lidarr metadata API"
authors = ["Lidarr <development@lidarr.audio>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<4"
aiocache = {version = "^0.11", extras = ["redis"]}
aiohttp = {version = "^3.9", extras = ["speedups"]}
asyncpg = "0.29.0"
billboard-py = "7.0.0"
gunicorn = "20.0.4"
h2 = "4.0.0"
pylast = "4.3.0"
pytelegraf = "0.3.3"
python-dateutil = "2.8.2"
levenshtein = "^0.25"
pytz = "2022.7"
quart = "^0.19"
redis = "3.5.3"
sentry-sdk = "*"
six = "1.15.0"
spotipy = "2.16.1"
# Test error caused by https://stackoverflow.com/questions/65289720/attributeerror-retry-object-has-no-attribute-method-whitelist
# and seemingly lastfm (the exact error isn't in our code)
urllib3 = "1.25.1"
uvicorn = "0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
mockredispy = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lidarr-metadata-server = "lidarrmetadata.server:main"
lidarr-metadata-crawler = "lidarrmetadata.crawler:main"

